--- a/components/_list.scss
+++ b/components/_list.scss
@@ -11,6 +11,7 @@ ul, ol { margin: 0; }
 
 .list-item {
     position: relative;
+    @include display-flex;
     @include rem(margin-bottom, $space-s);
     @include rem(padding-left, $space-m);
 }
@@ -30,7 +31,6 @@ ul, ol { margin: 0; }
 // List icon
 .list.list-icon .list-item {
     padding: 0;
-    @include display-flex;
 }
 
 .list.list-icon .list-item::before {
@@ -40,9 +40,9 @@ ul, ol { margin: 0; }
 .list.list-icon .list-item .icon {
     @include flex(0 0 auto);
     @include rem(margin, 0 $space-s 0 0);
-    
+
 }
 
-.list.list-icon .list-item-content {
+.list.list-icon .list-item > * {
     @include flex(1 0 auto);
 }
