--- a/components/_icon.scss
+++ b/components/_icon.scss
@@ -17,17 +17,8 @@
 .icon-20 {
     width: 20px;
     height: 20px;
-}
-
-/**
-* Positioning
-*/
-.icon.is-left {
-    @include rem(margin-right, $space-s);
-}
-
-.icon.is-right {
-    @include rem(margin-left, $space-s);
+    vertical-align: top;
+    margin: 0;
 }
 
 /**
