--- a/main.scss
+++ b/main.scss
@@ -36,7 +36,9 @@ Rebilly 2017
     'components/input',
     'components/toggle',
     'components/table',
-    'components/list';
+    'components/list',
+    'components/loading',
+    'components/tooltip';
 
 // 6. Page-specific styles
 @import
