--- a/main.css
+++ b/main.css
@@ -1008,6 +1008,8 @@ sub {
 */
 .btn[disabled] {
   opacity: 0.5;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+  filter: alpha(opacity=50);
   cursor: auto; }
   .btn[disabled]:hover {
     background: #FFFFFF;
@@ -1368,13 +1370,13 @@ select:-moz-focusring {
 /**
 * Input Group
 */
-.field-control.field-group {
+.field-group {
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex; }
 
-.field-control.field-group > * {
+.field-group > * {
   width: auto;
   -webkit-box-flex: 1 1 auto;
   -webkit-flex: 1 1 auto;
@@ -1383,20 +1385,20 @@ select:-moz-focusring {
   margin-left: -1px;
   margin-left: -0.1rem; }
 
-.field-control.field-group > *:not(:first-child):not(:last-child),
-.field-control.field-group > *:not(:first-child):not(:last-child) .field-input,
-.field-control.field-group > *:not(:first-child):not(:last-child) .field-addon {
+.field-group > *:not(:first-child):not(:last-child),
+.field-group > *:not(:first-child):not(:last-child) .field-input,
+.field-group > *:not(:first-child):not(:last-child) .field-addon {
   border-radius: 0;
   z-index: 90; }
 
-.field-control.field-group > *:first-child,
-.field-control.field-group > *:first-child .field-input,
-.field-control.field-group > *:first-child .field-addon {
+.field-group > *:first-child,
+.field-group > *:first-child .field-input,
+.field-group > *:first-child .field-addon {
   border-radius: 4px 0 0 4px; }
 
-.field-control.field-group > *:last-child,
-.field-control.field-group > *:last-child .field-input,
-.field-control.field-group > *:last-child .field-addon {
+.field-group > *:last-child,
+.field-group > *:last-child .field-input,
+.field-group > *:last-child .field-addon {
   border-radius: 0 4px 4px 0; }
 
 /**
@@ -1416,6 +1418,8 @@ select:-moz-focusring {
 ::-moz-placeholder {
   /* Firefox 19+ */
   opacity: 1;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+  filter: alpha(opacity=100);
   color: #A1B2C1; }
 
 :-ms-input-placeholder {
@@ -1443,6 +1447,8 @@ select:-moz-focusring {
 */
 input.field-checkbox[type=checkbox] {
   opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
   position: absolute;
   left: 0;
   top: 0;
@@ -1455,7 +1461,9 @@ input.field-checkbox[type=checkbox] {
     box-shadow: 0 0 0 1px #0044D4 inset, 0 0 0 0 rgba(161, 178, 193, 0.5) inset, 0 0 0 1px #0044D4; }
   input.field-checkbox[type=checkbox]:checked ~ .field-checkbox-style .icon {
     fill: #0044D4;
-    opacity: 1; }
+    opacity: 1;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: alpha(opacity=100); }
 
 .field-checkbox-style {
   cursor: pointer;
@@ -1477,13 +1485,17 @@ input.field-checkbox[type=checkbox] {
   position: absolute;
   top: -2px;
   right: -2px;
-  opacity: 0; }
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0); }
 
 /**
 * Radio
 */
 input.field-radio[type=radio] {
   opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
   position: absolute;
   left: 0;
   top: 0;
@@ -1496,7 +1508,9 @@ input.field-radio[type=radio] {
     box-shadow: 0 0 0 1px #0044D4 inset, 0 0 0 0 rgba(161, 178, 193, 0.5) inset, 0 0 0 1px #0044D4; }
   input.field-radio[type=radio]:checked ~ .field-radio-style .icon {
     fill: #0044D4;
-    opacity: 1; }
+    opacity: 1;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: alpha(opacity=100); }
 
 .field-radio-style {
   cursor: pointer;
@@ -1518,7 +1532,9 @@ input.field-radio[type=radio] {
   position: absolute;
   top: -2px;
   right: -2px;
-  opacity: 0; }
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0); }
 
 /**
 * Switch
@@ -1537,6 +1553,8 @@ input.field-radio[type=radio] {
 
 input.field-switch[type=checkbox] {
   opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
   position: absolute;
   left: 0;
   top: 0;
@@ -1643,20 +1661,17 @@ ul, ol {
   display: -webkit-flex;
   display: flex;
   margin-bottom: 8px;
-  margin-bottom: 0.8rem;
-  padding-left: 16px;
-  padding-left: 1.6rem; }
+  margin-bottom: 0.8rem; }
 
 .list-item::before {
   content: '\2022';
-  position: absolute;
-  top: 0;
-  left: 0;
+  margin-right: 8px;
+  margin-right: 0.8rem;
   color: #A1B2C1; }
 
 .list.list-divided .list-item {
-  padding: 8px 0 8px 16px;
-  padding: 0.8rem 0 0.8rem 1.6rem;
+  padding: 8px 0;
+  padding: 0.8rem 0;
   margin-bottom: 0; }
 
 .list.list-divided .list-item {
@@ -1665,19 +1680,9 @@ ul, ol {
 .list.list-divided .list-item:last-child {
   border-bottom: none; }
 
-.list-item.list-divided:before {
-  content: '\2022';
-  position: absolute;
-  top: 10px;
-  left: 0;
-  color: #A1B2C1; }
-
 /**
 * List Group
 */
-.list.list-group .list-item {
-  padding: 0; }
-
 .list.list-group .list-item::before {
   display: none; }
 
@@ -1686,5 +1691,357 @@ ul, ol {
   -webkit-flex: 1 1 auto;
   -ms-flex: 1 1 auto;
   flex: 1 1 auto; }
+
+.loading {
+  display: block;
+  position: relative;
+  width: 36px;
+  height: 36px;
+  background: #A1B2C1;
+  border-radius: 4px; }
+
+.loading > * {
+  -webkit-transition: height 0.3s ease;
+  -moz-transition: height 0.3s ease;
+  -ms-transition: height 0.3s ease;
+  -o-transition: height 0.3s ease;
+  transition: height 0.3s ease;
+  display: block;
+  position: absolute;
+  -webkit-transform-origin: top;
+  -moz-transform-origin: top;
+  -ms-transform-origin: top;
+  transform-origin: top;
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg);
+  width: 4px;
+  background: #F6F8F9; }
+
+.loading .mr-re {
+  top: 28px;
+  left: 9px;
+  height: 14px; }
+
+.loading .mr-bil {
+  top: 28px;
+  left: 16px;
+  height: 17px; }
+
+.loading .mr-ly {
+  top: 28px;
+  left: 23px;
+  height: 20px; }
+
+.loading.is-loading .mr-re {
+  height: 0px;
+  -webkit-animation: mr-re-animation 1s infinite;
+  -moz-animation: mr-re-animation 1s infinite;
+  -ms-animation: mr-re-animation 1s infinite;
+  -o-animation: mr-re-animation 1s infinite;
+  animation: mr-re-animation 1s infinite; }
+
+.loading.is-loading .mr-bil {
+  height: 0px;
+  -webkit-animation: mr-bil-animation 1s .2s infinite;
+  -moz-animation: mr-bil-animation 1s .2s infinite;
+  -ms-animation: mr-bil-animation 1s .2s infinite;
+  -o-animation: mr-bil-animation 1s .2s infinite;
+  animation: mr-bil-animation 1s .2s infinite; }
+
+.loading.is-loading .mr-ly {
+  height: 0px;
+  -webkit-animation: mr-ly-animation 1s .4s infinite;
+  -moz-animation: mr-ly-animation 1s .4s infinite;
+  -ms-animation: mr-ly-animation 1s .4s infinite;
+  -o-animation: mr-ly-animation 1s .4s infinite;
+  animation: mr-ly-animation 1s .4s infinite; }
+
+@-webkit-keyframes mr-re-animation {
+  0% {
+    height: 0; }
+  50% {
+    height: 14px; }
+  100% {
+    height: 0; } }
+@-moz-keyframes mr-re-animation {
+  0% {
+    height: 0; }
+  50% {
+    height: 14px; }
+  100% {
+    height: 0; } }
+@-ms-keyframes mr-re-animation {
+  0% {
+    height: 0; }
+  50% {
+    height: 14px; }
+  100% {
+    height: 0; } }
+@-o-keyframes mr-re-animation {
+  0% {
+    height: 0; }
+  50% {
+    height: 14px; }
+  100% {
+    height: 0; } }
+@keyframes mr-re-animation {
+  0% {
+    height: 0; }
+  50% {
+    height: 14px; }
+  100% {
+    height: 0; } }
+@-webkit-keyframes mr-bil-animation {
+  0% {
+    height: 0; }
+  50% {
+    height: 17px; }
+  100% {
+    height: 0; } }
+@-moz-keyframes mr-bil-animation {
+  0% {
+    height: 0; }
+  50% {
+    height: 17px; }
+  100% {
+    height: 0; } }
+@-ms-keyframes mr-bil-animation {
+  0% {
+    height: 0; }
+  50% {
+    height: 17px; }
+  100% {
+    height: 0; } }
+@-o-keyframes mr-bil-animation {
+  0% {
+    height: 0; }
+  50% {
+    height: 17px; }
+  100% {
+    height: 0; } }
+@keyframes mr-bil-animation {
+  0% {
+    height: 0; }
+  50% {
+    height: 17px; }
+  100% {
+    height: 0; } }
+@-webkit-keyframes mr-ly-animation {
+  0% {
+    height: 0; }
+  50% {
+    height: 20px; }
+  100% {
+    height: 0; } }
+@-moz-keyframes mr-ly-animation {
+  0% {
+    height: 0; }
+  50% {
+    height: 20px; }
+  100% {
+    height: 0; } }
+@-ms-keyframes mr-ly-animation {
+  0% {
+    height: 0; }
+  50% {
+    height: 20px; }
+  100% {
+    height: 0; } }
+@-o-keyframes mr-ly-animation {
+  0% {
+    height: 0; }
+  50% {
+    height: 20px; }
+  100% {
+    height: 0; } }
+@keyframes mr-ly-animation {
+  0% {
+    height: 0; }
+  50% {
+    height: 20px; }
+  100% {
+    height: 0; } }
+/* Base styles for the element that has a tooltip */
+[data-tooltip],
+.has-tooltip {
+  position: relative;
+  cursor: pointer;
+  text-align: center; }
+
+/* Base styles for the entire tooltip */
+[data-tooltip]:before,
+[data-tooltip]:after,
+.has-tooltip:before,
+.has-tooltip:after {
+  position: absolute;
+  visibility: hidden;
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+  pointer-events: none; }
+
+/* Show the entire tooltip on hover and focus */
+[data-tooltip]:hover:before,
+[data-tooltip]:hover:after,
+[data-tooltip]:focus:before,
+[data-tooltip]:focus:after,
+.has-tooltip:hover:before,
+.has-tooltip:hover:after,
+.has-tooltip:focus:before,
+.has-tooltip:focus:after {
+  visibility: visible;
+  opacity: 1;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+  filter: alpha(opacity=100); }
+
+/* Base styles for the tooltip's directional arrow */
+.has-tooltip:before,
+[data-tooltip]:before {
+  z-index: 1001;
+  border: 6px solid transparent;
+  background: transparent;
+  content: ""; }
+
+/* Base styles for the tooltip's content area */
+.has-tooltip:after,
+[data-tooltip]:after {
+  z-index: 1000;
+  padding: 8px;
+  width: 160px;
+  background-color: #505A6F;
+  color: #fff;
+  content: attr(data-tooltip);
+  border-radius: 4px;
+  font-size: 14px;
+  line-height: 1.2; }
+
+/* Directions */
+/* Top (default) */
+[data-tooltip]:before,
+[data-tooltip]:after,
+.has-tooltip:before,
+.has-tooltip:after,
+.has-tooltip-top:before,
+.has-tooltip-top:after {
+  bottom: 100%;
+  left: 50%; }
+
+[data-tooltip]:before,
+.has-tooltip:before,
+.has-tooltip-top:before {
+  margin-left: -6px;
+  margin-bottom: -12px;
+  border-top-color: #505A6F; }
+
+/* Horizontally align top/bottom tooltips */
+[data-tooltip]:after,
+.has-tooltip:after,
+.has-tooltip-top:after {
+  margin-left: -80px; }
+
+[data-tooltip]:hover:before,
+[data-tooltip]:hover:after,
+[data-tooltip]:focus:before,
+[data-tooltip]:focus:after,
+.has-tooltip:hover:before,
+.has-tooltip:hover:after,
+.has-tooltip:focus:before,
+.has-tooltip:focus:after,
+.has-tooltip-top:hover:before,
+.has-tooltip-top:hover:after,
+.has-tooltip-top:focus:before,
+.has-tooltip-top:focus:after {
+  -webkit-transform: translateY(-12px);
+  -moz-transform: translateY(-12px);
+  -ms-transform: translateY(-12px);
+  transform: translateY(-12px); }
+
+/* Left */
+.has-tooltip-left:before,
+.has-tooltip-left:after {
+  right: 100%;
+  bottom: 50%;
+  left: auto; }
+
+.has-tooltip-left:before {
+  margin-left: 0;
+  margin-right: -12px;
+  margin-bottom: 0;
+  border-top-color: transparent;
+  border-left-color: #505A6F; }
+
+.has-tooltip-left:hover:before,
+.has-tooltip-left:hover:after,
+.has-tooltip-left:focus:before,
+.has-tooltip-left:focus:after {
+  -webkit-transform: translateX(-12px);
+  -moz-transform: translateX(-12px);
+  -ms-transform: translateX(-12px);
+  transform: translateX(-12px); }
+
+/* Bottom */
+.has-tooltip-bottom:before,
+.has-tooltip-bottom:after {
+  top: 100%;
+  bottom: auto;
+  left: 50%; }
+
+.has-tooltip-bottom:before {
+  margin-top: -12px;
+  margin-bottom: 0;
+  border-top-color: transparent;
+  border-bottom-color: #505A6F; }
+
+.has-tooltip-bottom:hover:before,
+.has-tooltip-bottom:hover:after,
+.has-tooltip-bottom:focus:before,
+.has-tooltip-bottom:focus:after {
+  -webkit-transform: translateY(12px);
+  -moz-transform: translateY(12px);
+  -ms-transform: translateY(12px);
+  transform: translateY(12px); }
+
+/* Right */
+.has-tooltip-right:before,
+.has-tooltip-right:after {
+  bottom: 50%;
+  left: 100%; }
+
+.has-tooltip-right:before {
+  margin-bottom: 0;
+  margin-left: -12px;
+  border-top-color: transparent;
+  border-right-color: #505A6F; }
+
+.has-tooltip-right:hover:before,
+.has-tooltip-right:hover:after,
+.has-tooltip-right:focus:before,
+.has-tooltip-right:focus:after {
+  -webkit-transform: translateX(12px);
+  -moz-transform: translateX(12px);
+  -ms-transform: translateX(12px);
+  transform: translateX(12px); }
+
+/* Move directional arrows down a bit for left/right tooltips */
+.has-tooltip-left:before,
+.has-tooltip-right:before {
+  top: 3px; }
+
+/* Vertically center tooltip content for left/right tooltips */
+.has-tooltip-left:after,
+.has-tooltip-right:after {
+  margin-left: 0;
+  margin-bottom: -16px; }
 
 /*# sourceMappingURL=main.css.map */
