--- a/abstracts/_mixins.scss
+++ b/abstracts/_mixins.scss
@@ -23,7 +23,6 @@
   }
 }
 
-
 // Conversion px to rem
 // @author Greg Rickaby
 @mixin rem($property, $values) {
@@ -67,7 +66,6 @@
 	}
 }
 
-
 // Browser Prefix
 // @author Cesar Level
 // @param $property $args... - Use on CSS properties that requieres vendor prefixes http://shouldiprefix.com/
@@ -79,11 +77,32 @@
 }
 
 // Flex
-@mixin display-flex {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
+@mixin display-flex($important: false) {
+    @if $important == true {
+        display: -webkit-box!important;
+        display: -ms-flexbox!important;
+        display: -webkit-flex!important;
+        display: flex!important;
+    } @else {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+    }
+}
+
+@mixin display-inline-flex($important: false) {
+    @if $important == true {
+        display: -webkit-inline-box!important;
+        display: -ms-inline-flexbox!important;
+        display: -webkit-inline-flex!important;
+        display: inline-flex!important;
+    } @else {
+        display: -webkit-inline-box;
+        display: -ms-inline-flexbox;
+        display: -webkit-inline-flex;
+        display: inline-flex;
+    }
 }
 
 @mixin flex($args...) {
@@ -173,4 +192,22 @@
   opacity: $value;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity="+$IEValue+")";
   filter: alpha(opacity=$IEValue);
+}
+
+//Breakpoints
+//Inside a class
+// @include media-query-breakpoint('desktop') {
+//     padding-top: 4rem;
+//     font-size: 2.4rem;
+// }
+@mixin media-query-breakpoint($width, $type: min) {
+    @if map_has_key($breakpoints, $width) {
+        $width: map_get($breakpoints, $width);
+        @if $type == max {
+            $width: $width - 1px;
+        }
+        @media screen and (#{$type}-width: $width) {
+            @content;
+        }
+    }
 }
