--- a/abstracts/_variables.scss
+++ b/abstracts/_variables.scss
@@ -108,16 +108,17 @@ $border-radius: 4px;
 
 /// Container's maximum width
 /// @type Length
-$max-width: 1180px !default;
+$max-width: 1100px !default;
 
 
 /// Breakpoints map
 /// @prop {String} keys - Keys are identifiers mapped to a given length
 /// @prop {Map} values - Values are actual breakpoints expressed in pixels
 $breakpoints: (
-    'small': 320px,
-    'medium': 768px,
-    'large': 1024px,
+    'phone': 576px,
+    'tablet': 768px,
+    'desktop': 992px,
+    'large-desktop': 1200px,
 ) !default;
 
 
