--- a/main.css
+++ b/main.css
@@ -554,31 +554,14 @@ sub {
 /**
 * floats
 */
-.left {
+.float-left {
   float: left !important; }
 
-.right {
+.float-right {
   float: right !important; }
 
-/**
-* Main content containers
-* 1. Make the container full-width with a maximum width
-* 2. Center it in the viewport
-* 3. Leave some space on the edges, especially valuable on small screens
-*/
-.container {
-  max-width: 1180px;
-  /* 1 */
-  margin-left: auto;
-  /* 2 */
-  margin-right: auto;
-  /* 2 */
-  padding-left: 20px;
-  /* 3 */
-  padding-right: 20px;
-  /* 3 */
-  width: 100%;
-  /* 1 */ }
+.float-none {
+  float: none !important; }
 
 /**
 * Hide text while making it readable for screen readers
@@ -746,6 +729,18 @@ sub {
 /**
 * Flex Helpers
 */
+.display-flex {
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important; }
+
+.display-inline-flex {
+  display: -webkit-inline-box !important;
+  display: -ms-inline-flexbox !important;
+  display: -webkit-inline-flex !important;
+  display: inline-flex !important; }
+
 .no-flex {
   width: auto;
   -webkit-box-flex: 0 0 auto !important;
@@ -799,6 +794,41 @@ sub {
 
 .z-10 {
   z-index: 10 !important; }
+
+/**
+* Main content containers
+* 1. Make the container full-width with a maximum width
+* 2. Center it in the viewport
+* 3. Leave some space on the edges, especially valuable on small screens
+*/
+.container {
+  box-sizing: border-box;
+  margin-left: auto;
+  /* 2 */
+  margin-right: auto;
+  /* 2 */
+  padding-left: 20px;
+  /* 3 */
+  padding-right: 20px;
+  /* 3 */
+  width: 100%;
+  /* 1 */ }
+  @media screen and (min-width: 1200px) {
+    .container {
+      max-width: 1100px; } }
+
+.row {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex; }
+
+.row > * {
+  -webkit-box-flex: 1 0 auto;
+  -webkit-flex: 1 0 auto;
+  -ms-flex: 1 0 auto;
+  flex: 1 0 auto; }
 
 .icon {
   background-size: contain;
@@ -1235,6 +1265,32 @@ sub {
 .badge-info {
   background: #DCE7FE; }
 
+.has-badge {
+  position: relative; }
+
+.has-badge::after {
+  content: '';
+  position: absolute;
+  display: block;
+  height: 6px;
+  width: 6px;
+  top: 0;
+  right: 0;
+  border-radius: 50%;
+  box-shadow: 0 0 0 2px #ffffff; }
+
+.has-badge.is-positive::after {
+  background: #00AA13; }
+
+.has-badge.is-negative::after {
+  background: #E53935; }
+
+.has-badge.is-warning::after {
+  background: #F1C400; }
+
+.has-badge.is-info::after {
+  background: #0044D4; }
+
 .field,
 .field-control {
   position: relative; }
@@ -1563,7 +1619,7 @@ input.field-switch[type=checkbox] {
   box-sizing: border-box; }
   input.field-switch[type=checkbox]:checked + .field-switch-handle {
     background-color: #0044D4; }
-  input.field-switch[type=checkbox]:checked + .field-switch-handle:before {
+  input.field-switch[type=checkbox]:checked + .field-switch-handle::before {
     -webkit-transform: translateX(16px);
     -moz-transform: translateX(16px);
     -ms-transform: translateX(16px);
@@ -1583,7 +1639,7 @@ input.field-switch[type=checkbox] {
   -ms-transition: 0.4s;
   transition: 0.4s; }
 
-.field-switch-handle:before {
+.field-switch-handle::before {
   position: absolute;
   content: "";
   height: 16px;
